--- a/sital.css
+++ b/sital.css
@@ -5,7 +5,7 @@
 body{
     font-family: 'Oswald', sans-serif, 'Times New Roman';
     color: #000000;
-    background-color: #FFFFFF;
+    background-color: #ffffff;
 }
 .header {
     background-color: #ffffff;
@@ -59,50 +59,67 @@ body{
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        margin-bottom: 2%;
     }
 
     .object {
         display: flex;
         align-items: center;
         justify-content: center;
-        padding-bottom: 3.5%;
+        margin-bottom: 10%;
     }
 
-    .name > img {
-        max-width: 90.4%;
-    }
-    .rat > img {
+    .object > img {
         max-width: 100%;
     }
 
-    .dog > img {
-        max-width: 70.3%;
+    .one {
+        width: 95%;
+        margin-bottom: 0;
+        margin-left: 3%;
     }
 
-    .bat > img {
-        max-width: 77.6%;
+    .two {
+        width: 56.5%;
+        margin-left: 15%;
     }
 
-    .bees > img {
-        max-width: 58.2%;
+    .three {
+        width: 83.2%;
+        margin-left: 8%;
     }
 
-    .pig > img {
-        max-width: 89.7%;
+    .four {
+        width: 100%;
+    }
+
+    .four1 {
+        width: 0;
+    }
+
+    .five {
+        width: 83.2%;
+        margin-left: 8%;
+    }
+
+    .six {
+        width: 84.8%;
+        margin-left: 7%;
     }
 }
 
 @media (min-width:769px) {
     .container {
         position: relative;
-        aspect-ratio: 1440/1430;
+        aspect-ratio: 1440/3248;
     }
+
     .about {
         font: 'Times New Roman';
         font-weight: 400;
         size: 16px;
         line-height: 18.4px;
-        margin-top: 1.5%;
+        margin-top: 2.9%;
         margin-left: 1.4%;
         text-decoration: none;
         color: #000000;
@@ -118,67 +135,52 @@ body{
         color: #000000;
     }
 
-    .name > img {
-        max-width: 43%;
-        /*max-height: 8.4%;*/
-    }
-    .name {
-        position: absolute;
-        top: 8.1%;  
-        left: 24.2%;
+    .object > img {
+        max-width: 100%;
     }
 
-    .rat > img {
-        max-width: 46.5%;
-        /*max-height: 20.2%;*/
-    }
-    .rat {
+    .one {
         position: absolute;
-        top: 20.3%;
-        left: 4.2%;
+        width: 32.2%;
+        top: 4.7%;
+        left: 3.8%;
     }
 
-    .dog > img {
-        max-width: 62.2%;
-        /*max-height: 37.9%;*/
-    }
-    .dog {
+    .two {
         position: absolute;
-        top: 24.3%;
-        left: 60%;
+        width: 28.2%;
+        top: 6.5%;
+        left: 42.6%;
     }
 
-    .bees > img {
-        max-width: 30.4%;
-        /*max-height: 13.6%;*/
-    }
-    .bees {
+    .three {
         position: absolute;
-        top: 44.6%;
-        left: 33.6%;
+        width: 61%;
+        top: 19.6%;
+        left: 28.8%;
     }
 
-    .pig > img {
-        max-width: 30.7%;
-        /*max-height: 32.4%;*/
-    }
-    .pig {
-        position: absolute;
-        top: 66.3%;
-        left: 6.1%;
+    .four {
+        width: 0;
     }
 
-    .bat > img {
-        max-width: 55.3%;
-        /*max-height: 21.7%;*/
-    }
-    .bat {
+    .four1 {
         position: absolute;
-        top: 70.3%;
-        left: 51.9%;
+        width: 100%;
+        top: 33.9%;
+    }
+
+    .five {
+        position: absolute;
+        width: 89.5%;
+        top: 54.7%;
+        left: 5.2%;
+    }
+
+    .six {
+        position: absolute;
+        width: 38.3%;
+        top: 75%;
+        left: 37.2%;
     }
 }
-
-
-
-
