--- a/sital.css
+++ b/sital.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 body{
-    font-family: 'Oswald', sans-serif, 'Times New Roman';
+    font-family: 'Times New Roman';
     color: #000000;
     background-color: #ffffff;
 }
