--- a/fighting_animals.css
+++ b/fighting_animals.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 body{
-    font-family: 'Oswald', sans-serif, 'Times New Roman';
+    font-family: 'Times New Roman';
     color: #000000;
     background-color: #FFFFFF;
 }
@@ -14,7 +14,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Times New Roman';
 }
 .menu {
     font-family: 'Times New Roman';
@@ -28,7 +28,7 @@ body{
     text-align: center;
     text-transform: uppercase;
     color: #000000;
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Times New Roman';
 }
 
 @media (max-width:768px) {
@@ -59,6 +59,7 @@ body{
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        margin-top: 3%;
     }
 
     .object {
