--- a/kebabs.css
+++ b/kebabs.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 body{
-    font-family: 'Oswald', sans-serif, 'Times New Roman';
+    font-family: 'Times New Roman';
     color: #ffffff;
     background-color: #000000;
 }
@@ -14,7 +14,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Times New Roman';
 }
 .menu {
     font-family: 'Times New Roman';
@@ -28,7 +28,7 @@ body{
     text-align: center;
     text-transform: uppercase;
     color: #000000;
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Times New Roman';
 }
 
 @media (max-width:768px) {
@@ -36,18 +36,19 @@ body{
         font: 'Times New Roman';
         font-weight: 400;
         size: 24px;
-        line-height: 27.6px;
+        line-height: 20.6px;
         margin-top: 2.9%;
         margin-left: 7.7%;
         text-decoration: none;
         color: #ffffff;
+        margin-top: 10%;
     }
     
     .download {
         font: 'Times New Roman';
         font-weight: 400;
         size: 24px;
-        line-height: 27.6px;
+        line-height: 20.6px;
         margin-left: 7.7%;
         text-decoration: none;
         color: #ffffff;
@@ -59,7 +60,8 @@ body{
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        margin-bottom: 2%;
+        margin-bottom: 10%;
+        margin-top: 10%;
     }
 
     .object {
@@ -114,7 +116,8 @@ body{
         align-items: center;
         justify-content: center;
         padding-top: 2%;
-        max-width: 82.5%;
+        max-width: 37%;
+        margin-top: 2%;
     }
 
     .object > img {
