--- a/Zin_kitchen_for_16.css
+++ b/Zin_kitchen_for_16.css
@@ -3,361 +3,17 @@
     padding: 0;
 }
 body{
-    font-family: 'Oswald', sans-serif, 'Times New Roman';
-    color: #000000;
+    font-family: 'Times New Roman';
     background-color: #E4FF79;
 }
-
-@media (min-width:1201px) {
-    .container {
-        width: 1306px;
-        margin: 0px 67px;
-        position: relative;
-        height: 1552px;
-    }   
-
-    .about {
-        margin-top: 20px;
-        margin-left: 20px;
-        font: 'Times New Roman';
-        font-weight: 400;
-        size: 16px;
-        line-height: 18.4px;
-        text-decoration: none;
-    }
-    
-    .add-about {
-        padding-top: 17px;
-    }
-    
-    .object > img {
-        max-width: 570px;
-        max-height: 410px;
-        float: left;
-    }
-    
-    .objects > img {
-        max-width: 287px;
-        max-height: 410px;
-    }
-
-    .objects {
-        display: flex;
-        flex-direction: row;
-    }
-    
-    .first {
-        position: absolute;
-        top: 2.8%;
-        left: 0;
-    
-    }
-    
-    .second-three {
-        position: absolute;
-        top: 6.5%;
-        left: 50%;
-    }
-    
-    .four-five {
-        position: absolute;
-        top: 40%;
-        left: 2.6%;
-    }
-    
-    .sixth {
-        position: absolute;
-        left: 56.4%;
-        top: 36.2%;
-    }
-    
-    .seven-eight {
-        position: absolute;
-        left: 17.4%;
-        top: 70%;
-    }
-    
-    .nine {
-        position: absolute;
-        top: 2.8%;
-        left: 0;
-    }
-    
-    .ten-eleven {
-        position: absolute;
-        left: 17.4%;
-        top: 70%;
-    }
-    
-    .twelve-thirteen {
-        position: absolute;
-        left: 17.4%;
-        top: 70%;
-    }
-    
-    .fourteen-fifteen {
-        position: absolute;
-        left: 17.4%;
-        top: 70%;
-    }
-    
-    .sixteen-seventeen {
-        position: absolute;
-        left: 17.4%;
-        top: 70%;
-    }
-    
-}
-
-@media (max-width:1200px){
-
-    .container {
-        width: 1088.4px;
-        margin-left: 49.8px;
-        margin-right: 49.8px;
-        height: 1153.2px;
-        position: relative;
-    }
-
-    .about {
-        margin-top: 20px;
-        margin-left: 20px;
-        font: 'Times New Roman';
-        font-weight: 400;
-        size: 16px;
-        line-height: 18.4px;
-        text-decoration: none;
-    }
-    
-    .add-about {
-        padding-top: 17px;
-    }
-
-    .object > img {
-        max-width: 424px;
-        max-height: 305px;
-    }
-    
-    .objects > img {
-        max-width: 214px;
-        max-height: 305px;
-    }
-
-    .objects {
-        display: flex;
-        flex-direction: row;
-    }
-    
-    .first {
-        position: absolute;
-        top: 2.8%;
-        left: 0;
-    
-    }
-    
-    .second-three {
-        position: absolute;
-        top: 6.5%;
-        left: 50%;
-    }
-    
-    .four-five {
-        position: absolute;
-        top: 40%;
-        left: 2.6%;
-    }
-    
-    .sixth {
-        position: absolute;
-        left: 56.4%;
-        top: 36.2%;
-    }
-    
-    .seven-eight {
-        position: absolute;
-        left: 17.4%;
-        top: 70%;
-    }
-    
-    .nine {
-        position: absolute;
-        top: 2.8%;
-        left: 0;
-    }
-    
-    .ten-eleven {
-        position: absolute;
-        left: 17.4%;
-        top: 70%;
-    }
-    
-    .twelve-thirteen {
-        position: absolute;
-        left: 17.4%;
-        top: 70%;
-    }
-    
-    .fourteen-fifteen {
-        position: absolute;
-        left: 17.4%;
-        top: 70%;
-    }
-    
-    .sixteen-seventeen {
-        position: absolute;
-        left: 17.4%;
-        top: 70%;
-    }
-}
-
-@media (max-width:992px){
-    .container {
-        width: 899.7px;
-        height: 890.9px;
-        position: relative;
-        margin-left: 38.5px;
-    }
-
-    .about {
-        margin-top: 20px;
-        margin-left: 20px;
-        font: 'Times New Roman';
-        font-weight: 400;
-        size: 16px;
-        line-height: 18.4px;
-        text-decoration: none;
-    }
-    
-    .add-about {
-        padding-top: 17px;
-    }
-
-    .object > img {
-        max-width: 328px;
-        max-height: 265px;
-        float: left;
-    }
-    
-    .objects > img {
-        max-width: 165px;
-        max-height: 265px;
-        float: left;
-    }
-
-    .objects {
-        display: flex;
-        flex-direction: row;
-    }
-    
-    .first {
-        position: absolute;
-        top: 2.8%;
-        left: 0;
-    
-    }
-    
-    .second-three {
-        position: absolute;
-        top: 6.5%;
-        left: 50%;
-    }
-    
-    .four-five {
-        position: absolute;
-        top: 40%;
-        left: 2.6%;
-    }
-    
-    .sixth {
-        position: absolute;
-        left: 56.4%;
-        top: 36.2%;
-    }
-    
-    .seven-eight {
-        position: absolute;
-        left: 17.4%;
-        top: 70%;
-    }
-    
-    .nine {
-        position: absolute;
-        top: 2.8%;
-        left: 0;
-    }
-    
-    .ten-eleven {
-        position: absolute;
-        left: 17.4%;
-        top: 70%;
-    }
-    
-    .twelve-thirteen {
-        position: absolute;
-        left: 17.4%;
-        top: 70%;
-    }
-    
-    .fourteen-fifteen {
-        position: absolute;
-        left: 17.4%;
-        top: 70%;
-    }
-    
-    .sixteen-seventeen {
-        position: absolute;
-        left: 17.4%;
-        top: 70%;
-    }
-}
-
-@media (max-width:768px){
-    .container {
-        max-width: 652.8px !important;
-        margin-left: 32px;
-        margin-right: 32px;
-        display: flex;
-        flex-direction: column !important;
-    }
-
-    .about {
-        margin-top: 20px;
-        margin-left: 20px;
-        font: 'Times New Roman';
-        font-weight: 400;
-        size: 16px;
-        line-height: 18.4px;
-        text-decoration: none;
-    }
-
-    .object > img {
-        max-width: 100%;
-    }
-
-    .objects > img {
-        max-width: 51%;
-    }
-
-    .object {
-        display: block;
-    }
-
-    .objects {
-        display: flex;
-        flex-direction: row;
-    }
-
-    
-
-}
-
 .header {
-    background-color: #E4FF79;
+    background-color: #ffffff;
     width: auto;
+    height: 110px;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Times New Roman';
 }
 .menu {
     font-family: 'Times New Roman';
@@ -366,9 +22,123 @@ body{
     font-family: 'Times New Roman';
     font-style: normal;
     font-weight: 700;
+    font-size: 36px;
+    line-height: 53px;
     text-align: center;
     text-transform: uppercase;
     color: #000000;
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Times New Roman';
 }
 
+@media (max-width:768px) {
+    .container {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-self: center;
+        flex-direction: column;
+        margin-top: 10%;
+        margin-bottom: 10%;
+    }
+    .about1 {
+        margin-top: 63px;
+        margin-left: 33px;
+        width: 84%;
+    }
+
+    .about {
+        font: 'Times New Roman';
+        font-weight: 400;
+        font-size: 20px;
+        line-height: 23px;
+        text-decoration: none;
+        color: #000000;
+    }
+    
+    .download {
+        font: 'Times New Roman';
+        font-weight: 400;
+        font-size: 20px;
+        line-height: 23px;
+        text-decoration: none;
+        color: #000000;
+    }
+
+    .object {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 0;
+        margin: 0;
+    }
+
+    img {
+        max-width: 85%;
+    }
+}
+
+@media (min-width: 769px) {
+    .container {
+        margin-left: 4.7%;
+        margin-right: 4.7%;
+        margin-top: 3%;
+        width: 100%;
+        position: relative;
+        aspect-ratio: 1306/1411;
+    }
+
+    .about1 {
+        margin-top: 24px;
+        margin-left: 20px;
+    }
+
+    .about {
+        font: 'Times New Roman';
+        font-weight: 400;
+        size: 16px;
+        line-height: 18.4px;
+        text-decoration: none;
+        color: #000000;
+    }
+    
+    .download {
+        font: 'Times New Roman';
+        font-weight: 400;
+        size: 16px;
+        line-height: 18.4px;
+        text-decoration: none;
+        color: #000000;
+    }
+
+    .object {
+        max-width: 39.6%;
+    }
+
+    img {
+        max-width: 100%;
+    }
+
+    .two {
+        position: absolute;
+        top: 4.2%;
+        left: 50%;
+    }
+
+    .three {
+        position: absolute;
+        top: 38.2%;
+        left: 2.6%;
+    }
+
+    .four {
+        position: absolute;
+        top: 34%;
+        left: 56.4%;
+    }
+
+    .five {
+        position: absolute;
+        top: 71.2%;
+        left: 17.5%;
+    }
+}
