--- a/Zin_kitchen_for_16.css
+++ b/Zin_kitchen_for_16.css
@@ -82,7 +82,7 @@ body{
         margin-left: 4.7%;
         margin-right: 4.7%;
         margin-top: 3%;
-        width: 100%;
+        max-width: 100%;
         position: relative;
         aspect-ratio: 1306/1411;
     }
