--- a/Zin_kitchen_for_16.css
+++ b/Zin_kitchen_for_16.css
@@ -95,7 +95,7 @@ body{
     .about {
         font: 'Times New Roman';
         font-weight: 400;
-        size: 16px;
+        font-size: 16px;
         line-height: 18.4px;
         text-decoration: none;
         color: #000000;
@@ -104,7 +104,7 @@ body{
     .download {
         font: 'Times New Roman';
         font-weight: 400;
-        size: 16px;
+        font-size: 16px;
         line-height: 18.4px;
         text-decoration: none;
         color: #000000;
