--- a/calendar.css
+++ b/calendar.css
@@ -115,7 +115,7 @@ body{
     .about {
         font: 'Times New Roman';
         font-weight: 400;
-        size: 16px;
+        font-size: 16px;
         line-height: 18.4px;
         text-decoration: none;
         color: #ffffff;
@@ -124,7 +124,7 @@ body{
     .download {
         font: 'Times New Roman';
         font-weight: 400;
-        size: 16px;
+        font-size: 16px;
         line-height: 18.4px;
         text-decoration: none;
         color: #ffffff;
