--- a/index.css
+++ b/index.css
@@ -37,7 +37,7 @@ body{
         text-decoration: none;
         color: #000000;
         position: absolute;
-        margin-top: 63px;
+        margin-top: 43px;
         margin-left: 33px   ;
     }
 
@@ -190,7 +190,7 @@ body{
         width: 84.6%;
         font: 'Times New Roman';
         font-weight: 400;
-        size: 20px;
+        font-size: 16px;
         line-height: 18.4px;
         text-decoration: none;
         color: #000000;
@@ -215,7 +215,7 @@ body{
     .calendar-WAP {
         width: 17.6%;
         position: absolute;
-        top: 9.9%;  
+        top: 8%;  
         left: 24%;
     }
 
