--- a/sital.css
+++ b/sital.css
@@ -124,7 +124,7 @@ body{
     .about {
         font: 'Times New Roman';
         font-weight: 400;
-        size: 16px;
+        font-size: 16px;
         line-height: 18.4px;
         text-decoration: none;
         color: #000000;
@@ -133,7 +133,7 @@ body{
     .download {
         font: 'Times New Roman';
         font-weight: 400;
-        size: 16px;
+        font-size: 16px;
         line-height: 18.4px;
         text-decoration: none;
         color: #000000;
@@ -145,8 +145,8 @@ body{
 
     .one {
         position: absolute;
-        width: 32.2%;
-        top: 4.7%;
+        width: 33.5%;
+        top: 3.7%;
         left: 3.8%;
     }
 
