--- a/calendar.css
+++ b/calendar.css
@@ -33,7 +33,7 @@ body{
 
 @media (max-width:768px) {
     .about1 {
-        margin-top: 63px;
+        margin-top: 35px;
         margin-left: 33px;
         width: 84%;
     }
@@ -105,6 +105,12 @@ body{
     .container {
         position: relative;
         aspect-ratio: 1440/1430;
+    }
+
+    .video {
+        margin-top: 24px;
+        margin-left: 20px;
+        margin-bottom: 4%;
     }
 
     .about1 {
