--- a/calendar.css
+++ b/calendar.css
@@ -149,7 +149,6 @@ body{
         display: flex;
         align-items: center;
         justify-content: center;
-        padding-top: 2%;
         max-width: 82.5%;
     }
 
@@ -157,8 +156,18 @@ body{
         max-width: 100%;
     }
 
+    .rr {
+        max-width: 82.5%;
+        margin-bottom: 7px;
+    }
+
     .one > img {
         max-width: 0;
+    }
+
+    .one1 {
+        margin-top: 4%;
+        margin-bottom: 2%;
     }
 
     .three > img {
