--- a/game-diagrams.css
+++ b/game-diagrams.css
@@ -4,11 +4,12 @@
 }
 body{
     font-family: 'Times New Roman';
-    color: #ffffff;
-    background-color: #000000;
+    color: #000000;
+    background-color: #80769B;
+    ;
 }
 .header {
-    background-color: #ffffff;
+    background-color: #80769B;
     width: auto;
     height: 110px;
     display: flex;
@@ -38,6 +39,11 @@ body{
         width: 84%;
     }
 
+    .video {
+        margin-top: 10%;
+        margin-left: 33px;
+        margin-bottom: 10%;
+    }
     .about {
         font: 'Times New Roman';
         font-weight: 400;
@@ -62,26 +68,55 @@ body{
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        margin-bottom: 10%;
-        margin-top: 10%;
     }
 
     .object {
         display: flex;
         align-items: center;
         justify-content: center;
-        padding-top: 2%;
+    }
+
+    .one {
+        margin-top: 10%;
+        margin-bottom: 10%;
     }
 
     .object > img {
         max-width: 82.5%;
     }
+
+    .ob {
+        padding-top: 5px;
+    }
+
+    .one1 > img {
+        max-width: 0;
+    }
+
+    .three1 > img {
+        max-width: 0;
+    }
+
+    .six1 > img {
+        max-width: 0;
+    }
 }
 
 @media (min-width:769px) {
     .frame {
-        position: relative;
-        aspect-ratio: 1311/774;
+        aspect-ratio: 1311/4273;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-left: 4.5%;
+        margin-right: 4.5%;
+        margin-top: 0.6%;
+        margin-bottom: 0.8%;
+    }
+
+    .video {
+        margin-left: 20px;
+        padding-bottom: 24px;
     }
 
     .about1 {
@@ -95,7 +130,7 @@ body{
         font-size: 16px;
         line-height: 18.4px;
         text-decoration: none;
-        color: #ffffff;
+        color: #000000;
     }
     
     .download {
@@ -104,29 +139,17 @@ body{
         font-size: 16px;
         line-height: 18.4px;
         text-decoration: none;
-        color: #ffffff;
-    }
-
-    .frame {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        margin-bottom: 2%;
-    }
-
-    .object {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        padding-top: 2%;
-        max-width: 37%;
-        margin-top: 2%;
-        padding-left: 10%;
+        color: #000000;
     }
 
     .object > img {
-        max-width: 100%;
+        width: 100%;
     }
+
+    .object {
+        width: 91.5%;
+        margin-bottom: 0.2%;
+    }
+
+    
 }
